# sc25

./: .gitignore  LICENSE  MCP_SERVERS_SPEC.md  README.md  UNIFIED_HPC_MCP_TOOLS.md
.github/workflows/: ci.yml  release.yml
agent/: system_prompt.md
argocd/: README.md  root-app.yaml
argocd/applications/: cert-manager.yaml  flux-mcp-server.yaml  flux-operator.yaml  hpc-mcp-server.yaml  shared-resources.yaml  slurm-mcp-server.yaml  slurm-operator-crds.yaml  slurm-operator.yaml
bootstrap/: README.md  setup_local_cluster.sh  slurm-values.yaml  sssd.conf.example
bootstrap/demo/: demo_flux_jobs.sh  demo_lib.sh  demo_slurm_jobs.sh
manifests/: flux-minicluster.yaml  hpc-mcp-namespace.yaml  slurm-minimal.yaml  slurm-scc.yaml
manifests/shared/: kustomization.yaml
mcp-servers/: README.md  build.sh  build_and_deploy.sh  push.sh
mcp-servers/hpc_mcp_server/: Containerfile  README.md  pyproject.toml
mcp-servers/hpc_mcp_server/src/hpc_mcp_server/: __init__.py  server.py
mcp-servers/hpc_mcp_server/src/hpc_mcp_server/clients/: flux_operator_client.py  slurm_client.py
mcp-servers/hpc_mcp_server/src/hpc_mcp_server/core/: app.py  dependencies.py  settings.py
mcp-servers/hpc_mcp_server/src/hpc_mcp_server/tools/: __init__.py  flux_tools.py  slurm_tools.py
mcp-servers/hpc_mcp_server/tests/: test_flux_operator_client.py
test_jobs/: README.md
workloads/: Containerfile  README.md  drug_screen.sh  ensemble_member.sh  genomics_stage1.sh  genomics_stage2.sh  genomics_stage3.sh  md_simulation.sh  monte_carlo.sh  parallel_task.sh  parameter_sweep.sh
(+98 files in other folders)
