[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-mcp-server"
version = "0.1.0"
description = "Unified MCP server for Slurm REST and Flux Operator MiniClusters"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Kush Gupta" }
]
license = { text = "MIT" }
dependencies = [
  "fastmcp>=2.0.0",
  "mcp>=1.0.0",
  "requests>=2.31.0",
  "pyyaml>=6.0.0",
  "pydantic>=2.6.0",
  "kubernetes>=28.0.0",
  "starlette>=0.27.0",
  "uvicorn[standard]>=0.23.0",
  "sse-starlette>=1.6.0"
]

[tool.setuptools.packages.find]
where = ["src"]
